--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,4 +47,6 @@ jobs:
           docker build -t taxcalc-api:latest .
 
       - name: Verify image
-        run: docker run --rm taxcalc-api:latest --help || echo "Image built successfully"
+        run: docker run --rm taxcalc-api:latest java -version 
+        #run: docker run --rm taxcalc-api:latest --help || echo "Image built successfully"
+
