--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,13 +34,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
       - uses: docker/setup-buildx-action@v3
 
       - name: Build Docker Image
         run: docker build -t taxcalc-api:latest .
 
-      - name: Verify image
+      - name: Verify image starts
         run: docker run --rm taxcalc-api:latest java -version
 
 
@@ -61,10 +60,12 @@ jobs:
 
       - name: Build & Tag Image
         run: |
-          IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/taxcalc-api:latest
-          docker build -t $IMAGE_NAME .
+          OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          IMAGE=ghcr.io/$OWNER/taxcalc-api:latest
+          docker build -t $IMAGE .
 
       - name: Push Image
         run: |
-          IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/taxcalc-api:latest
-          docker push $IMAGE_NAME
+          OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          IMAGE=ghcr.io/$OWNER/taxcalc-api:latest
+          docker push $IMAGE
